--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,9 @@
   "name": "client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.mjs",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --experimental-modules index.js"
   },
   "author": "",
   "type": "module",
