--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "client",
+  "name": "RPC",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node --experimental-modules index.js"
+    "server": "node --experimental-modules server.js",
+    "client": "node --experimental-modules client.js"
   },
   "author": "",
   "type": "module",
